RESOLVED FIXED163753
[CSS Parser] Fix crash when parsing -webkit-margin-collapse
https://bugs.webkit.org/show_bug.cgi?id=163753
Summary [CSS Parser] Fix crash when parsing -webkit-margin-collapse
Dave Hyatt
Reported 2016-10-20 13:00:22 PDT
[CSS Parser] Fix crash when parsing -webkit-margin-collapse
Attachments
Patch (2.01 KB, patch)
2016-10-20 13:01 PDT, Dave Hyatt
dino: review+
Dave Hyatt
Comment 1 2016-10-20 13:01:48 PDT
Dave Hyatt
Comment 2 2016-10-20 13:13:12 PDT
Landed something a bit different in r207636.
Note You need to log in before you can comment on or make changes to this bug.