[CSS Parser] Fix crash when parsing -webkit-margin-collapse https://bugs.webkit.org/show_bug.cgi?id=163753

Reviewed by Dean Jackson.

* css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::parseShorthand):



Canonical link: https://commits.webkit.org/181521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207636 268f45cc-cd09-0410-ab3c-d52691b4dbfc